# video-insight

./: # 视频洞察系统交互规范 - 场景一：基于用户模板分析.md  .dockerignore  .env.example  .gitignore  CLOUD_DEPLOYMENT_TUTORIAL.md  DEPLOY_CHECKLIST.md  DEPLOY_TO_FC.md  Dockerfile  PROJECT_DOC.md  README.md  bot.py  debug_fields.py  debug_url_parser.py  diagnostic_feishu.py  inspect_lark.py  main.py  pyproject.toml  requirements.txt  s.yaml  server.py  test_search.py  user_folders.json
.github/workflows/: deploy.yml
deploy/: Dockerfile  docker-compose.yml  s.yaml  s.yaml.bak
docs/: deployment.md
prompts/interaction/: intent_clarification.md
prompts/video_analyzer/: data_synthesis.md  visual_description.md
scripts/: build-and-push.sh
src/: ai_analyzer.py  config.py  core.py  downloader.py  feishu_syncer.py  video_processor.py
src/common/: bot_actions.py
src/runners/: bot_runner.py  cli.py  server_runner.py
src/video_insight/: ai_analyzer.py  cid_processor.py  config.py  core.py  data_store.py  downloader.py  fc_context.py  feishu_syncer.py  prompt_loader.py  video_processor.py
src/video_insight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/video_insight/bot/: __init__.py  fc_init.py  handlers.py
video_insight/: ai_analyzer.py  config.py
