[project]
name = "video-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "funasr>=1.0.0",
    "modelscope>=1.10.0",
    "requests>=2.32.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.0",
    "lark-oapi>=1.5.2",
    "opencv-python>=4.13.0.90",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "numba>=0.59.0",
    "umap-learn>=0.5.5",
]
