[project]
name = "video-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "tqdm>=4.67.0",
    "lark-oapi>=1.5.2",
    "opencv-python-headless>=4.8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "oss2>=2.18.0",
    "pycryptodome>=3.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

